--- a/AutomatonExperiment.vcxproj
+++ b/AutomatonExperiment.vcxproj
@@ -66,6 +66,24 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="base\automaton\automaton.hpp" />
+    <ClInclude Include="base\constants.hpp" />
+    <ClInclude Include="base\generator\generator.hpp" />
+    <ClInclude Include="base\generator\simple_generator.hpp" />
+    <ClInclude Include="base\solver\result.hpp" />
+    <ClInclude Include="base\solver\solver.hpp" />
+    <ClInclude Include="base\view\view.hpp" />
+    <ClInclude Include="sync_game\solver\sync_graph.hpp" />
+    <ClInclude Include="sync_game\solver\sync_result.hpp" />
+    <ClInclude Include="sync_game\solver\sync_search.hpp" />
+    <ClInclude Include="sync_game\solver\sync_solver.hpp" />
+    <ClInclude Include="sync_game\view\sync_view.hpp" />
+    <ClInclude Include="vendor\cmdline.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
