adding maximum view

--- a/AutomatonExperiment.vcxproj
+++ b/AutomatonExperiment.vcxproj
@@ -77,11 +77,14 @@
     <ClInclude Include="base\solver\result.hpp" />
     <ClInclude Include="base\solver\solver.hpp" />
     <ClInclude Include="base\view\view.hpp" />
+    <ClInclude Include="base\view\view_factory.hpp" />
     <ClInclude Include="sync_game\solver\sync_graph.hpp" />
     <ClInclude Include="sync_game\solver\sync_result.hpp" />
     <ClInclude Include="sync_game\solver\sync_search.hpp" />
     <ClInclude Include="sync_game\solver\sync_solver.hpp" />
-    <ClInclude Include="sync_game\view\sync_view.hpp" />
+    <ClInclude Include="sync_game\view\sync_full_view.hpp" />
+    <ClInclude Include="sync_game\view\sync_maximum_view.hpp" />
+    <ClInclude Include="sync_game\view\sync_view_factory.hpp" />
     <ClInclude Include="vendor\cmdline.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
